metacatui/src/main/webapp/js/themes/snap/css/metacatui.css
/* ... */
	
	h2{
		font: 400 27.5px/40px "PT Serif", Georgia, serif;
		color: #6c7578;
		font-style: italic;
	}
	
	h1{
		font-family: 'Open Sans', Helvetica, Arial, sans-serif;
		font-weight: 800;
		font-size: 1.5em;
		color: #FFFFFF;
		line-height: 1.35;
		margin: 0 0 0.125em 0;
		-webkit-text-stroke: 0.75px rgba(255, 255, 255, 0.5);
		text-shadow: 0 0 10px rgba(0,0,0,1);
	}
	
	
    
    article, aside, figure, footer, header, hgroup, menu, nav, section { 
      display:block; 
      overflow: visible;  
    }

	section{
		display: block;
		width: 100%;
		overflow: visible;
		position: relative;
		background-color: #eae7e3;
		word-break: break-word;
		padding-top: 20px;
	}

    
    h1 > a[name], h2 > a[name], h3 > a[name],
    h4 > a[name], h5 > a[name], h6 > a[name] {
      color: #555555;
      text-decoration: none;
      z-index: 20; /*keeps hidden anchor tags from blocking content*/
    }
    
    /* make sure the anchors render with padding-top */
    h1 > a[name]:before, h2 > a[name]:before, h3 > a[name]:before,
    h4 > a[name]:before, h5 > a[name]:before, h6 > a[name]:before {
		content: "";
    padding-top: 115px;
    }
    
    a {
      color: #840C11;
      font-style: italic;
      text-decoration: none;
    }
    
    a:hover{
    	color: #840C11;
    	font-style: italic;
    	text-decoration: none;
    }
    
    ul, ol{
    	margin: 0px;
    }
    
    ul.indent > li{
    	margin-left: 15px;
    }
    
    ul.plain-list > li{
    	list-style: none;
    }
   
    .clear{
    	clear: both;
    }
    
    .left{
    	float: left;
    }
    
    .inline{
    	display: inline;
    }
    
    .italic{
    	font-style: italic;
    }
    
    .text-info{
    	font-style: italic;
    	color: #6c7578;
    }
    
    .margin-bottom{
    	margin-bottom: 20px;
    }
    
    div.row-fluid > a[name] {
      margin: 35px auto auto auto;
    }
    
    .tooltip{
    	min-width: 60px;
    }

 /* HEADER
-------------------------------------------------- */ 
header{
	min-height: 35%;
	width: 100%;
	overflow: hidden;
	position: relative;	
}
   
#bg_image{
    	height: 100%;
    	width: 100%;
   		background-repeat: no-repeat;
   		background-position: center;
   		background-size: cover;
   		position: absolute;
   		top: 0;
   		z-index: 0;
}

#bg_image h1{
	position:absolute;
	top: 50%;
	left: 10%;
}

#sidebar_share{
	color: #fff;
	font-family: "Open Sans", Helvetica, Arial, sans-serif;
	font-size: 0.7222em;
	display: inline-block;
	text-transform: uppercase;
	background-repeat: no-repeat;
	line-height: 1.25;
	font-style: normal;
	font-weight: bold;
	position: absolute;
	top: 65%;
	left: 10%;
}
#sidebar_share:hover span,
#sidebar_share span:hover
{
	opacity: 1;
	color: #FFFFFF;
	text-decoration: none;
}
#sidebar_share > span{
	display: block;
	margin-top: 5px;
		opacity: 0.75;
}

#sidebar_share > img{
		opacity: 0.75;
}

/* FORM/INPUT CUSTOMIZATIONS
-------------------------------------------------- */ 
	.controls-well {
	    padding: 4px;
	    background: rgba(255, 255, 255, 0.3);
	}
	.control-label {
		cursor: default;
	}
		
	#results-header select{
		border: 0;
		border-radius: 0;
		-webkit-border-radius: 0px;
		-moz-border-radius: 0px;
		-webkit-appearance: none;
		background: none;
		width: 120px;
		-moz-appearance: none;
		appearance: none;
		/*To hide the drop-down arrow in Firefox */
		text-indent: 0.01px;
		text-overflow: '';
		font-family: "PT Serif";
	}
	
	#results-header .select > i{
		margin-right: -110px;
	}
	
	.input-append{
		font-size: 1em;
	}


/* SHARE/UPLOAD, AND LOGIN FEATURES 
* Choose to hide these features
* -----------------------------------------------------*/
.share-feature{
	/* display: none; */ 
}

/* NOTIFICATION AREA CSS
 * -------------------------------------------------- */    
  section#Notification {
    height: 40px;
    width: inherit;
    max-height: 40px;
    min-height: 40px;
  }
  
  .progress-striped{
  	border-radius: 0px;
  	-webkit-border-radius: 0px;
	-moz-border-radius: 0px;
  }
  
  .progress-striped .bar{
  	background-color: #166194;
  }

  
/* FOOTER CSS
-------------------------------------------------- */    

    footer#Footer {
      margin-top: 40px;
      background: rgba(0, 0, 0, 0.8);
      padding: 20px 0px;
      height: 200px;
      width: 100%;
      color: #E2E5E7;
      font-size: 0.8em;
      line-height: 1.5em;
      background-color: #373D47;
    }
    
    footer#Footer img.vertical-center{
    	margin-top: 20%;
    }

    footer#Footer h2 {
      font-style: italic;
      font-size: 1.2em;
      line-height: 1.5em;
      color: #FDFDFD;
    }
    
    footer a{
    	color: #FFFFFF;
    	font-weight: bold;
    }
    
    
    footer#Footer ul.helpitems {
      list-style: none;
    }
    
    footer#Footer ul.helpitems > li{
    	line-height: 2em;
    }
    
    ul.helpitems a {
      color: #FDFDFD;     
    }
    
    ul.helpitems a:hover{
    	color: #FDFDFD;
    	text-decoration: underline; 
    }
    

    footer img {
      opacity: .75;
    }
    
    footer img:hover{
    	opacity: 1;
    }
    
    footer a.knb{
		color: #D9D9D9;
		font: 400 40px "Lato";
		line-height: 55px;
		letter-spacing: -3px;
		text-align: center;
    }
    
    footer a.knb:hover{
    	color: #FFFFFF;
    	text-decoration: none;
    }
    
    
    a.social{
    	display: inline-block;
    	padding: 0 0 0 20px;
    }
    
    a.gplus{
    	background: url(../img/icon-gplus.png) no-repeat 2px 3px;
    	margin-left: 4px;
    }
    
    a.facebook{
    	background: url(../img/icon-facebook.png) no-repeat 0 3px;
    }
    
    a.twitter{
    	background: url(../img/icon-twitter.png) no-repeat 0 3px;
    	margin-left: 5px;
    }
    
    a.cgi,
    a img.cgi{
    	opacity: 1;
    	display: block;
    	float: left;
    	margin-right: 20px;
    }
    
    .footer-left{
    	width: 275px;
    	float: left;
    	margin-right: 20px;
    }
/* ... */

